@@ -639,6 +639,7 @@ Dungeon ATTNAM;
 					s = decoration(COUCH);
 					f = fountain;
 					d = decoration(DOUBLE_BED);
+					B = GOLD boulder; 
 				}
 			}
 			{
@@ -651,17 +652,17 @@ Dungeon ATTNAM;
 				b.b#..#.b....#...........#....b.#..#b.b
 				...#..#....###...........###....#..#...
 				b.b#..#b..b#.....T...T.....#b..b#..#b.b
-				...#..###..#.......c.......#..###..#...
+				...#..###..#.......c.......#..###.B#...
 				b.b#....#.b#.......c.......#b.#....#b.b
-				...#....#..#.......c.......#..#....#...
+				...#....#..#.......c.......#..#BB..#...
 				b.b###..#b.###.....c.....###.b#..###b.b
-				....b#..#@#.b#.....c.....#b.#@#..#b....
-				b....#....#..#.....c.....#..#....#....b
+				....b#..#@#.b#.....c.....#b.#@#.B#b....
+				b....#....#..#.....c.....#..#..B.#....b
 				..bb.###..####.....c.....####..###.bb..
-				b.....b#.....#.....c.....#.....#b.....b
-				.b..b..#.....#.....c.....#.....#..b..b.
+				b.....b#.....#.....c.....#...B.#b.....b
+				.b..b..#.....#.....c.....#.B...#..b..b.
 				b..b...####..#.....c.....#..####...b..b
-				b....b....#..#.....c.....#..#....b....b
+				b....b....#..#.....c.....#.B#....b....b
 				.b.b....b###D#.....c.....#D###b....b.b.
 				b...b#####.#.#.....c.....#.#.#####b.b.b
 				....##.....D.#.....c.....#.D.....##....
@@ -707,32 +708,38 @@ Dungeon ATTNAM;
 					h = SAPPHIRE stone;
 					r = RUBY stone;
 					d = DIAMOND stone;
-					C = chest;
+					C = RUBY chest;
 					W = wandofpolymorph;
 					1 = lantern { SideStackIndex = UP; }
 					2 = lantern { SideStackIndex = DOWN; }
 					3 = lantern { SideStackIndex = RIGHT; }
 					4 = lantern { SideStackIndex = LEFT; }
+					R = ring(RING_OF_FIRE_RESISTANCE); 
+					I = ring(RING_OF_INVISIBILITY);
+					E = amulet(AMULET_OF_ESP);
+					S = GOLD meleeweapon(LONG_SWORD);
+					H = DIAMOND helmet(HELM_OF_UNDERSTANDING);
+					G = GOLD banana;
 				}
 			}
 			{
 				............##2###2##............
 				............#.......#............
 				####......###.......###......####
-				#..#......#...........#......#..#
-				#..#....###...........###....#..#
-				#..#....#...d.....a.d...#....#..#
-				#..###..#......p.p......#..###..#
-				#...e#..#......b.b......#..#....#
-				#...e#..#......k.k......#..#....#
-				##1.e#..##1.r..p.p..r.1##..#..1##
-				..#.e4##..#....b.b....#..##3..#..
-				..#....#..#....k.k....#..#....#..
-				..###..4###....p.p....###3..###..
-				....#.....3.h..b.b..h.4.....#....
-				....#.....#....k.k....#.....#....
-				....###3..#....p.p....#..4###....
-				.......#..#....b.b....#..#.......
+				#..#......#...........#......#rd#
+				#..#....###...........###....#gg#
+				#..#....#...d.....a.d...#....#gC#
+				#..###..#......p.p......#..###IR#
+				#...e#..#......b.b......#..#EEII#
+				#...e#..#......k.k......#..#SHHG#
+				##1.e#..##1.r..p.p..r.1##..#dg1##
+				..#.e4##..#....b.b....#..##3rr#..
+				..#....#..#....k.k....#..#rRRR#..
+				..###..4###....p.p....###3gi###..
+				....#.....3.h..b.b..h.4irdWg#....
+				....#.....#....k.k....#iEggg#....
+				....###3..#....p.p....#SW4###....
+				.......#..#....b.b....#gd#.......
 				......###.3.i..k.k..i.4.###......
 				..#####.#.#....p.p....#.#.#####..
 				.##.......#....b.b....#.......##.
@@ -855,7 +862,7 @@ Dungeon ATTNAM;
 					i = can { ContainedMaterial = POLAR_BEAR_FLESH; }
 					L = BREAD loaf;
 					a = lantern;
-					P = potion { ContainedMaterial = OMLE_URINE; }
+					P = potion { ContainedMaterial = OMEL_URINE; }
 					C = bodyarmor(CHAIN_MAIL);
 					x = meleeweapon(AXE);
 				}
