@@ -1,3 +1,11 @@
+October 16 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Added ANTIDOTE effect
+	* Added antidote liquid
+	* "Omle" -> "Omel" because *CLASSIFIED*
+	* added treasure room to Valpuri's cathedral
+	* slightly increased the possiblity of bottles (to get about as much other potions with the new liquid..)  
+	
 October 15 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Sign added to olterrain.pcx by Kahvi
